# OJ-Test

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.app  README.md  ai.md  docker-compose.yml  docker-entrypoint.sh  init.sql  setup.sh
.content/: AI智能辅助系统.md  开发者指南.md  快速开始.md  部署指南.md  项目概述.md
.content/代码评测系统/: 代码评测系统.md  异步并发评测架构.md  评测引擎设计.md  资源管理与监控.md
.content/用户管理系统/: 用户功能模块.md  管理员功能模块.md
.content/系统架构设计/: 分层架构设计.md  系统架构设计.md  组件交互机制.md
.qoder/repowiki/zh/content/: AI智能辅助系统.md  AI辅助学习系统.md  AI集成技术设计.md  Admin Module.md  Overall Architecture.md  User Module.md  命令行界面设计.md  开发指南.md  快速开始.md  故障排除与FAQ.md  故障排除与维护.md  数据库设计.md  版本历史.md  版本演进历史.md  界面交互与美化.md  部署与配置.md  部署指南.md  项目概述.md  题目管理系统.md
.qoder/repowiki/zh/content/API参考文档/: AI客户端API.md  API参考文档.md  (+4 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
History/: OJ_v0.1.md  OJ_v0.2.md  OJ_v0.3.md  OJ_v1.0.md  OJ_v1.1.md
ai/: .env.example  ai_service.py  requirements.txt
data/1/: 3.in  5.in
data/3/: 4.in
data/4/: 4.in
data/8/: 1.in  4.in
docs/: async_concurrent_judge_architecture.md  code_submission_design.md  judge_implementation_plan.md
include/: admin.h  admin_view.h  ai_client.h  app_context.h  color_codes.h  container_pool.h  db_manager.h  docker_manager.h  judge_core.h  sandbox_container.h  user.h  user_view.h  view_manager.h
judge-sandbox/: Dockerfile
src/: admin.cpp  admin_view.cpp  ai_client.cpp  app_context.cpp  container_pool.cpp  db_manager.cpp  judge_core.cpp  main.cpp  sandbox_container.cpp  user.cpp  user_view.cpp  view_manager.cpp
workspace/: solution.cpp
(+59 files in other folders)
